# COP3530-Project2

./: CMakeLists.txt  README.md  app.js  datahandler.h  distance.h  index.html  main.cpp  minHeap  minHeap.h  mock-data.json  parse.h  styles.css  weightedTrie.h
data/noaa_database/: StormEvents_details-ftp_v1.0_d2000_c20250520.csv  StormEvents_details-ftp_v1.0_d2001_c20250520.csv  StormEvents_details-ftp_v1.0_d2002_c20250520.csv  StormEvents_details-ftp_v1.0_d2003_c20250520.csv  StormEvents_details-ftp_v1.0_d2004_c20250520.csv  StormEvents_details-ftp_v1.0_d2005_c20250520.csv  StormEvents_details-ftp_v1.0_d2006_c20250520.csv  StormEvents_details-ftp_v1.0_d2007_c20250520.csv  StormEvents_details-ftp_v1.0_d2008_c20250520.csv  StormEvents_details-ftp_v1.0_d2009_c20250520.csv  StormEvents_details-ftp_v1.0_d2010_c20250520.csv  StormEvents_details-ftp_v1.0_d2011_c20250520.csv  StormEvents_details-ftp_v1.0_d2012_c20250520.csv  StormEvents_details-ftp_v1.0_d2013_c20250520.csv  StormEvents_details-ftp_v1.0_d2014_c20250520.csv  StormEvents_details-ftp_v1.0_d2015_c20250818.csv  StormEvents_details-ftp_v1.0_d2016_c20250818.csv  StormEvents_details-ftp_v1.0_d2017_c20250520.csv  StormEvents_details-ftp_v1.0_d2018_c20250520.csv  StormEvents_details-ftp_v1.0_d2019_c20250520.csv  StormEvents_details-ftp_v1.0_d2020_c20250702.csv  StormEvents_details-ftp_v1.0_d2021_c20250520.csv  StormEvents_details-ftp_v1.0_d2022_c20250721.csv  StormEvents_details-ftp_v1.0_d2023_c20250731.csv  StormEvents_details-ftp_v1.0_d2024_c20250818.csv
